# overthink

./: .gitignore  AGENT-CONVENTIONS.md  DECISIONS.md  DESIGN.md  README.md  STATUS.md  VISION.md  pyproject.toml
paretothink/: __init__.py  bon.py  checker.py  cli.py  client.py  data.py  eval.py  router.py
tests/: test_checker.py  test_router.py
