[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paretothink"
version = "0.0.1"
description = "Make any model reason optimally — compute-optimal test-time scaling for any OpenAI-compatible model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.34",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
paretothink-eval = "paretothink.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["paretothink"]
